@@ -3,6 +3,9 @@
 # shall lcdproc be started (yes/no)
 START=no
 
+# config file
+#CONFIGFILE=/etc/lcdproc/lcdproc.conf
+
 # options for lcdproc startup
 #OPTIONS="C G"
 
