@@ -3,6 +3,9 @@
 # shall lcdvc be started (yes/no)
 START=no
 
+# config file
+#CONFIGFILE=/etc/lcdproc/lcdvc.conf
+
 # options for lcdvc startup
 #OPTIONS=""
 
